[package]
name = "blockchain"
version = "0.1.0"
authors = ["Andrew <arellok@gmail.com>"]

[dependencies]
env_logger = "0.5.3"
futures = "*"
hyper = "*"
log = "0.4.1"
serde = "*"
serde_derive = "*"
serde_json = "*"
syn = "0.12.7"
url = "1.6.0"
lazy_static = "1.2.0"
sha2 = "0.8.0"
rust-crypto = "0.2.36"
